# ritz

./: CLAUDE.md  Cargo.toml  MODULE-OPTIONS-BACKLOG.md  README.md
crates/ritz-app/: Cargo.toml
crates/ritz-app/src/: context.rs  fonts.rs  gui.rs  hooks.rs  icon_center.rs  image.rs  main.rs  notify.rs  resources.rs  splash.rs  supervisor.rs  theme.rs
crates/ritz-app/src/backends/: hypr_monctl.rs  lsfg.rs  mod.rs
crates/ritz-core/: Cargo.toml
crates/ritz-core/src/: builder.rs  condition.rs  config.rs  error.rs  extension.rs  lib.rs  lsfg_toml.rs  resolve.rs  schema.rs  steam.rs  variables.rs
docs/: README.md  extensions.html  index.html  style.css  usage.html
docs/architecture/: overview.md
docs/brainstorm/: custom-module-editor.md  ide-mode.md
docs/claude-instructions/: documentation-version-policy.md  documentation.md
docs/features/: bundled-modules.md  extension-system.md  hooks-and-scripts.md  launch-command-assembly.md  process-supervisor.md  resource-export.md  runtime-backends.md  scoped-config.md  settings-gui.md  splash-and-new-game-wizard.md
docs/meta/: TERMINOLOGY.md
docs/ui/: STYLING-GUIDE.md
resources/extensions/built-in/custom-args/: custom-args.json
resources/extensions/built-in/custom-env/: custom-env.json
resources/extensions/built-in/custom-game-env/: custom-game-env.json
resources/extensions/built-in/hypr-monctl/: hypr-monctl.json
resources/extensions/default/: amd.json  dxvk.json  gamescope.json  misc.json  proton.json  pulse.json  vkd3d.json
website/: README.md  style.css  usage.html
(+5 files in other folders)
