[workspace]
resolver = "2"
members = [
    "crates/ritz-core",
    "crates/ritz-app",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Ritze"]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
anyhow = "1"
shlex = "1"
toml = "0.8"
dirs = "5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
nix = { version = "0.29", features = ["signal", "process"] }
signal-hook = "0.3"
