[package]
name = "ritz-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
indexmap.workspace = true
thiserror.workspace = true
shlex.workspace = true
toml.workspace = true
dirs.workspace = true
